# -*- Mode: Makefile; -*-
# vim: set ft=automake :
#
# (C) 2011 by Argonne National Laboratory.
#     See COPYRIGHT in top-level directory.
#

# mix in the "make testing" rule and other boilerplate
include $(top_srcdir)/Makefile.mtest

ACLOCAL_AMFLAGS = -I ../../confdb

static_subdirs = util attr basic datatype coll comm errhan group info init \
                 pt2pt rma spawn topo errors manual perf
all_lang_subdirs = f77 cxx f90

# DIST_SUBDIRS must be a superset of SUBDIRS, and automake must be able to
# *statically* compute its contents.  The good news is that we can mostly avoid
# duplication because automake is able to "see" into simple variable
# assignments that are not driven by a configure @-substitution variable.
DIST_SUBDIRS = $(static_subdirs) io $(all_lang_subdirs) threads .
SUBDIRS      = $(static_subdirs) $(iodir) $(otherlangs) $(threadsdir) .

EXTRA_DIST = maint/common.defn maint/f77tof90.in maint/testmerge.in maint/updatefiles testlist.in

DISTCLEANFILES = config.system

## here are automakefile entries for the test/mpi/include dir
noinst_HEADERS = include/mpitest.h include/mpitestcxx.h include/mpithreadtest.h
nodist_noinst_HEADERS = include/mpitestconf.h

# Need to patch some things up: put a local copy of confdb in the directory
# and make configure use that.  We also need to rebuild configure, since
# automake has already done that. 
# An alternative is to copy the confdb directory here rather than link to the
# master one in MPICH2.  The drawback to that approach is that critical macros
# might be deleted by someone looking at the confdb in this test directory,
# on the basis that they are not used by the tests, even though they are needed
# by MPICH2 or other tools.  As this very problem has (and continues) to happen,
# it is safer to use the master confdb.
# Make sure to disable rebuilding the autotools related files - the 
# receiver of this distribution may not have the necessary tools and 
# should not need them.  Finally, the distributed configure must disable
# maintainer targets by default - otherwise, the unsuspecting user will
# see automake et al attempt to rebuild the autotools, which is likely to 
# fail unless the user has the correct versions of all of the tools
dist-hook:
	if [ ! -d "@mpich2_top_srcdir@" ] ; then \
	    echo "The dist target requires that the mpich2 source directory be provided" ; \
	    exit 1 ; \
	fi
	cd $(distdir) && \
	    svn export https://svn.mcs.anl.gov/repos/mpi/mpich2/trunk/confdb confdb
	cd $(distdir) && \
	    sed -e 's/AC_CONFIG_AUX_DIR.*/AC_CONFIG_AUX_DIR([confdb])/' \
	        -e 's/AC_CONFIG_MACRO_DIR.*/AC_CONFIG_MACRO_DIR([confdb])/' \
		-e 's/AM_MAINTAINER_MODE.*/AM_MAINTAINER_MODE([disable])/' \
	        configure.ac > conftmp.ac && mv conftmp.ac configure.ac
	cd $(distdir) && \
	    sed -e 's%ACLOCAL_AMFLAGS.*%ACLOCAL_AMFLAGS = -I confdb%' \
		Makefile.am > m.am && mv m.am Makefile.am
	cd $(distdir) && $(AUTOMAKE) --add-missing
	cd $(distdir) && $(AUTOMAKE) --foreign
	cd $(distdir) && $(ACLOCAL) -Iconfdb
	cd $(distdir) && $(AUTOCONF) -Iconfdb
	cd $(distdir) && $(AUTOHEADER) -Iconfdb

## FIXME: here's the sketchy "make dist" rule from the Makefile.sm implementation
## (Note that this rule did work, unlike the default one generated by Automake.
## The dist-hook above addresses some of the issues, though problems remain.)

##dist:	
##	if [ ! -d "@mpich2_top_srcdir@" ] ; then \
##	    echo "The dist target requires that the mpich2 source directory be provided" ; \
##	    exit 1 ; \
##	fi
##	if [ ! -d .tmp ] ; then mkdir .tmp ; else rm -rf .tmp && mkdir .tmp ; fi
##	cd .tmp && svn export https://svn.mcs.anl.gov/repos/mpi/mpich2/trunk/test/mpi mpi2test
##	cd .tmp/mpi2test && \
##	    svn export https://svn.mcs.anl.gov/repos/mpi/mpich2/trunk/confdb confdb
##	cd .tmp/mpi2test && \
##	    sed -e 's/AC_CONFIG_AUX_DIR.*/AC_CONFIG_AUX_DIR(confdb)/' \
##	        configure.ac > conftmp.in && mv conftmp.in configure.ac
##	cd .tmp/mpi2test && maint/updatefiles -mpich2dir=@mpich2_top_srcdir@
##	cd .tmp/mpi2test && @mpich2_top_srcdir@/maint/simplemake Makefile.sm
##	cd .tmp && tar cf mpi2test.tar mpi2test && gzip -9 mpi2test.tar 
##	if [ -s .tmp/mpi2test.tar.gz ] ; then \
##	    mv .tmp/mpi2test.tar.gz . ; rm -rf .tmp ; \
##	else echo "Could not create tarfile for test suite"; exit 1 ; fi
